cleaning up repo
- HTML fragments are now stored as .txt files rather than .html
  this transition is in-progress
- top-level pages now reside in their own folder
- deleting some .php files that racket will replace
- removing .htaccess

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			&nbsp;&nbsp;
 			<a rel="me" title="my Depop profile" href="https://www.depop.com/jacobwhall/">👕</a>
 		</p>
-		<p><a href="about.html">about</a> - <a href="links.html">linkroll</a> - <a href="/dreams">ideas</a></p>
+		<p><a href="about">about</a> - <a href="links">linkroll</a> - <a href="/dreams">ideas</a></p>
 	</div>
 </div>
 <div id="contentbox">
