adding top-level page dispatcher to site.rkt

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
 		<h2>things i've made</h2>
 		<ul>
 			<li>
+				<a href="https://recipes.jacobhall.net">Alyssa &amp; Jacob's recipes</a>
+			</li>
+			<!--
+			<li>
 				<a href="2019/printkey">3D Print KW1, SC1, SC4 Keys</a>
 			</li>
+			-->
 			<li>
 				<a href="https://wordways.us">wordways.us</a>
 			</li>
